Adicionado funcionalidade de buscar tabela